--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ pyarrow = "^14.0.2"
 matplotlib = "^3.8.2"
 lightgbm = "^4.2.0"
 scikit-learn = "^1.3.2"
-cloudpickle = "^3.0.0"
+cloudpickle = "2.2.1"
 scipy = "^1.11.4"
 setuptools = "^69.0.3"
 numerai-tools = "^0.0.17"
